--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 flask==1.1.2
 python-dotenv==0.14.0
 flask-wtf==0.14.3
-flask-sqlalchemy==2.4.4
+SQLAlchemy==1.3.24
+flask-sqlalchemy==2.5.1
 flask-migrate==2.5.3
 flask-login==0.5.0
 email-validator==1.1.1
